# filter

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  story-variables.env  test-prompts.env
docker/: README.md
docker/templates/default/: .env.j2  Dockerfile.j2  docker-compose.yml.j2  entrypoint.sh  template.yaml
docker/templates/minimal/: .env.j2  Dockerfile.j2  docker-compose.yml.j2  template.yaml
docker/templates/python/: .env.j2  Dockerfile.j2  docker-compose.yml.j2  template.yaml
kanban/planning/: storage-optimization-story.md
kanban/prompts/: claude-compose.md  fix-bug.md
kanban/stories/: storage-optimization-story.md
projects/ib-stream/: project.yaml
projects/ib-stream/kanban/prompts/: refactor-code.md
projects/ib-stream/kanban/stories/: ibstr-1.md
projects/marketbridge/: project.yaml
projects/marketbridge/kanban/prompts/: add-feature.md  setup-project.md  setup-workspace.md
scripts/: claude-in-tmux.sh
src/filter/: __init__.py  cli.py  command_algebra.py  command_utils.py  config.py  logging_config.py  projects.py  validation.py  workspace.py
src/filter/commands/: __init__.py  project.py  repository.py  story.py  workspace.py
src/filter/functors/: __init__.py  project.py  repository.py  story.py  workspace.py
src/filter/operations/: __init__.py  workspace_operations.py
src/filter/types/: __init__.py  entities.py  phantom.py  states.py
story/templates/: default.md.j2
tests/: test_functor_laws.py
